test/fail/errors/PublicWithoutOpen.agda
module PublicWithoutOpen where

module A where

module B = A public
